fixed p alignment issue in index.html and made adjustments to container

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,10 +12,9 @@ h1 {
     font-family: "Georgia", Times, "Times New Roman", Serif;
 }
 
-.container {
+.container-fluid, .container {
     box-sizing: border-box;
-    width: 960px;
-    margin: auto;
+    max-width: 960px;
 }
 
 div {
@@ -29,7 +28,6 @@ div {
 
 .img-fluid {
     max-width: 100%;
-    height: auto;
 }
 
 p {
@@ -99,11 +97,12 @@ h3, h5 {
 button {
         text-align: center;
         vertical-align: middle;
-        padding: 1% 5% 0% 5%;
+        padding: 1% 3% 1% 3%;
         height: auto;
         background-color: #4aaaa5;
         color: #ffffff;
         margin: 20px;
+        font-size: large;
     }
 
 label {
@@ -122,4 +121,11 @@ input {
 textarea {
     width: 100%;
     border: 0;
+}
+
+@media (min-width: 768px) {
+  .image-thumbnail {
+    float: left;
+    margin-right: 10px;
+  }
 }
